--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,8 +12,10 @@ a {
   color: inherit;
   font-size: inherit;
   transition: color 150ms ease;
-  &:hover {
-    color: $secondary;
+  @media (min-width: 992px) {
+    &:hover {
+      color: $secondary;
+    }
   }
 }
 
@@ -27,6 +29,7 @@ ul, ol {
 img {
   width: 100%;
   height: 100%;
+  display: block;
 }
 
 body {
@@ -49,6 +52,10 @@ body {
 
 .page {
   flex: 1 1 100%;
+  margin: 80px 0px 0px 0px;
+  @media (max-width: 767px) {
+    margin: 50px 0px 0px 0px;
+  }
 }
 
 ._container {
