--- a/src/scss/modules/global.scss
+++ b/src/scss/modules/global.scss
@@ -62,6 +62,24 @@
   }
 }
 
+.card-target {
+  @media (min-width: 1220px) {
+    min-width: 600px;
+  }
+  & > *:not(:last-child) {
+    margin: 0px 0px 20px 0px;
+  }
+  &__title {
+    font-size: 24px;
+    line-height: calc(28 / 24 * 100%);
+    color: $secondary;
+    font-weight: 400;
+  }
+  &__text {
+    max-width: 480px;
+  }
+}
+
 .btn{
     padding: 10px 20px;
     border-radius: 40px;
