--- a/src/scss/modules/ui.scss
+++ b/src/scss/modules/ui.scss
@@ -27,7 +27,7 @@
 ._ibg {
   position: relative;
   img {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
