--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,7 @@ a {
   text-decoration: none;
   color: inherit;
   font-size: inherit;
-  transition: color 150ms ease;
+  transition: all 150ms ease;
   @media (min-width: 992px) {
     &:hover {
       color: $secondary;
@@ -79,4 +79,5 @@ body {
 @import './modules/global';
 @import "./sections/header";
 @import "./sections/introduction";
-@import "./sections/target"
+@import "./sections/target";
+@import "./sections/footer"
