--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,8 @@
 @import './modules/variables';
 @import "./modules/ui";
+@import "../../node_modules/swiper/swiper.scss";
+@import "../../node_modules/swiper/modules/navigation/navigation.scss";
+
 
 * {
   margin: 0;
@@ -66,3 +69,4 @@ body {
 @import "./modules/global.scss";
 @import "./sections/header";
 @import "./sections/hero.scss";
+@import "./sections/advantages.scss";
