--- a/src/scss/sections/advantages.scss
+++ b/src/scss/sections/advantages.scss
@@ -5,6 +5,13 @@
         max-width: 360px;
         min-width: 300px;
     }
+
+    &-swiper{
+        display: block;
+        @media (min-width: 1200px) {
+            display: none;
+        }
+    }
     
     &__info{
         display: flex;
@@ -70,7 +77,7 @@
             border: 1px solid $secondary;
             border-radius: 4px;
             padding: 20px;
-            max-height: 360px;
+            max-height: 400px;
             display: inline-block;
 
             @media (max-width: 1200px) {
