added investment block

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,3 +70,4 @@ body {
 @import "./sections/header";
 @import "./sections/hero.scss";
 @import "./sections/advantages.scss";
+@import "./sections/investment.scss";
