--- a/src/scss/sections/advantages.scss
+++ b/src/scss/sections/advantages.scss
@@ -41,6 +41,10 @@
         align-items: center;
         margin: 0 0 0 10px;
 
+        @media (min-width: 1200px) {
+            display: none;
+        }
+
         .controll-btn{
             background: none;
             border: none;
