exit menu added

--- a/src/html/components/button.html
+++ b/src/html/components/button.html
@@ -1,4 +1,4 @@
-<button class="btn @@class">
+<button class="btn @@class" data-markup="@@dataset">
     @@text
     <svg width="24" height="25" viewBox="0 0 24 25" fill="current" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_128_119)">
