--- a/src/scss/sections/exit.scss
+++ b/src/scss/sections/exit.scss
@@ -2,9 +2,11 @@
   &._is-active{
     .menu_exit__content{
       right: 0;
+      top: 0;
     }
     .menu_exit__overlay{
       opacity: 1;
+      visibility: visible;
     }
   }
   &__overlay {
@@ -17,11 +19,12 @@
     left: 0;
     z-index: 10;
     opacity: 0;
+    visibility: hidden;
     transition: .3s ease-in-out;
   }
 
   &__content{
-    position: absolute;
+    position: fixed;
     padding: 60px 100px;
     background: #fff;
     height: 100%;
@@ -66,7 +69,7 @@
     height: 20px;
   }
 }
-.introduction {
+.introduction-menu {
   &__item {
     border-bottom: 1px solid #B6B6B6;
     padding: 0px 0px 10px 0px;
@@ -108,7 +111,7 @@
   }
 }
 
-.investment {
+.investment-menu {
   &__title {
     font-weight: 400;
     font-size: 24px;
