--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -34,6 +34,7 @@
       line-height: calc(28 / 24 * 100%);
       max-width: 740px;
       margin: 0px 0px 40px 0px;
+      text-transform: uppercase;
       @media (max-width: 576px) {
         font-size: 16px;
       }
