--- a/src/scss/sections/advantages.scss
+++ b/src/scss/sections/advantages.scss
@@ -96,6 +96,10 @@
                 color: #B6B6B6;
             }
 
+            &__text{
+                font-size: 16px;
+            }
+
             &__title{
                 font-size: 34px;
                 font-weight: 400;
