--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -59,6 +59,12 @@
     align-items: start;
     flex-wrap: wrap;
     margin: 0px -50px -60px;
+    @media(max-width: 767px) {
+      margin: 0px -30px -40px;
+    }
+    &-item {
+      max-width: 260px;
+    }
   }
   &__column {
     flex: 0 1 20%;
@@ -71,6 +77,7 @@
     }
     @media (max-width: 767px) {
       flex: 0 1 50%;
+      padding: 0px 30px 40px 30px;
     }
     @media (max-width: 475px) {
       flex: 0 1 100%;
