--- a/src/scss/sections/exit.scss
+++ b/src/scss/sections/exit.scss
@@ -81,10 +81,10 @@
     padding: 0px 0px 10px 0px;
     margin-bottom: 20px;
     display: flex;
-    // @media (max-width: 1236px) {
-    //   gap: 10px;
-    //   flex-direction: column;
-    // }
+    @media (max-width: 1236px) {
+      gap: 10px;
+      flex-direction: column;
+    }
 
   }
 
@@ -98,12 +98,19 @@
   &__percent{
     width: 100px;
     text-align: end;
+    @media (max-width: 1236px) {
+      text-align: start;
+    }
   }
 
   &__text {
 
     margin-left: auto;
     padding: 0 0 0 10px;
+    @media (max-width: 1236px) {
+      padding: 0;
+      margin: 0;
+    }
 
     &--green {
       color: #006F62;
