--- a/src/scss/modules/global.scss
+++ b/src/scss/modules/global.scss
@@ -75,6 +75,7 @@
     line-height: calc(28 / 24 * 100%);
     color: $secondary;
     font-weight: 400;
+    text-transform: uppercase;
   }
   &__text {
     max-width: 480px;
