--- a/src/scss/sections/exit.scss
+++ b/src/scss/sections/exit.scss
@@ -126,6 +126,7 @@
     text-transform: uppercase;
     color: #006F62;
     margin-bottom: 30px;
+    max-width: 600px;
     @media (max-width: 576px) {
       font-size: 20px;
     }
