--- a/src/scss/sections/advantages.scss
+++ b/src/scss/sections/advantages.scss
@@ -98,6 +98,7 @@
 
             &__text{
                 font-size: 16px;
+                line-height: calc(20 / 16 * 100%);
             }
 
             &__title{
