--- a/src/scss/sections/hero.scss
+++ b/src/scss/sections/hero.scss
@@ -34,6 +34,7 @@
         height: 500px;
         object-fit: cover;
         margin: 60px 0 0;
+        border-radius: 4px;
 
         @media(max-width: 1400px){
             height: 400px;
