--- a/src/scss/sections/advantages.scss
+++ b/src/scss/sections/advantages.scss
@@ -67,6 +67,7 @@
 
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+        grid-auto-rows: minmax(360px, auto);
         gap: 20px;
 
         @media (max-width: 1440px) {
